openfaas-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.global-static-ip-name: nginx-ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: openfaas-ingress
  namespace: openfaas
spec:
  rules:
  - host: openfaas.kumarutsavanand.com
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 8080
        path: /
  tls:
  - hosts:
      - openfaas.kumarutsavanand.com
    secretName: letsencrypt-production-cert
